[package]
name = "ec-deploy"
description = "The deployment kernel: model, plan, and the five ports. No I/O — adapters live in ec-adapters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ec-diag = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
