[package]
name = "ec-diag"
description = "Diagnostics, exit codes, and output rendering shared by every edgecommons CLI verb."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
