[package]
name = "ec-scaffold"
description = "Embedded component templates, the manifest-v2 engine, and the generation pipeline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
ec-diag = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
