[package]
name = "ec-studio"
description = "The Deployment Studio server — an axum service with an embedded React/Carbon UI over the same kernel the CLI uses."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ec-deploy = { workspace = true }
ec-adapters = { workspace = true }
ec-diag = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
include_dir = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
