[package]
name = "interop-rust-node"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "interop-rust-node"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
edgecommons = { path = "../../../libs/rust" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-std"] }
serde_json = "1"

[features]
greengrass = ["edgecommons/greengrass"]
