[package]
name = "edgestreamlog-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "PyO3 native module for the edgecommons telemetry-streaming core (edgestreamlog)."
publish = false

[lib]
name = "edgestreamlog_native"
crate-type = ["cdylib"]

[dependencies]
edgestreamlog = { path = "../.." }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }

[features]
# Real Kinesis export in the wheel (heavy: AWS SDK + tokio). Off by default for a light dev build.
kinesis = ["edgestreamlog/kinesis"]
# Real Kafka export in the wheel. Builds librdkafka via cmake (needs cmake + a C compiler at build
# time; vendored, so no system librdkafka at runtime). Off by default for a light dev build.
kafka = ["edgestreamlog/kafka"]
