[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "edgestreamlog-native"
description = "PyO3 native module for the edgecommons telemetry-streaming core."
requires-python = ">=3.9"
classifiers = ["Programming Language :: Rust"]
dynamic = ["version"]

[tool.maturin]
module-name = "edgestreamlog_native"
features = ["pyo3/extension-module"]
